trunk/Archive2/ba/7e564e670bc254/output
main.cpp: In lambda function:
main.cpp:10:34: error: 'this' was not captured for this lambda function
     auto stackoverflow = [](){ (*this)(); };
                                  ^
