trunk/Archive2/ba/7e564e670bc254/main.cpp
#include <iostream>
#include <vector>
#include <bitset>
#include <tuple>
#include <map>
#include <array>
#include <functional>

int main() {
    auto stackoverflow = [](){ (*this)(); };
    stackoverflow();
}